<resources>
    <string name="app_name">CarScout</string>
    <string name="fullscreen_image">Fullscreen Image</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="year">Year</string>
    <string name="mileage">Mileage</string>
    <string name="condition">Condition</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_images">Add Images</string>
    <string name="save_car">Save Car</string>
    <string name="car_info">Car Info</string>
    <string name="car_icon">Car icon</string>
    <string name="model_icon">Model icon</string>
    <string name="model">Model</string>
    <string name="year_icon">Year icon</string>
    <string name="mileage_icon">Mileage icon</string>
    <string name="details">Details</string>
    <string name="condition_icon">Condition icon</string>
    <string name="description_icon">Description icon</string>
    <string name="price_icon">Price icon</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show_filters">Show Filters</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="show_my_listings">Show My Listings</string>
    <string name="add_car">Add Car</string>
    <string name="dealership_name">Dealership Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="info">Info</string>
    <string name="save_dealership">Save Dealership</string>
    <string name="add_dealership">Add Dealership</string>
    <string name="login">Login</string>
    <string name="welcome_back_to_the_app">Welcome back to the app</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password_placeholder">*********</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="user_avatar">User Avatar</string>
    <string name="use_url">Use URL</string>
    <string name="upload_image">Upload Image</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="avatar_url">Avatar URL</string>
    <string name="save_profile">Save Profile</string>
    <string name="create_account">Create account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register_as_business">Register as Business</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="car_image">Car image</string>
    <string name="dealership_image">Dealership image</string>
    <string name="selected_image">Selected Image</string>
    <string name="user_name">User Name</string>
    <string name="user_example_com">user@example.com</string>
    <string name="delete_image">Delete image</string>
</resources>
